packages/typ/tests/fixtures/diagnostics/0989_mli_unary_type_overapplied_08.mli.expected
File "0989_mli_unary_type_overapplied_08.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0989_mli_unary_type_overapplied_08 is not a valid module name.

File "0989_mli_unary_type_overapplied_08.mli", line 2, characters 14-36:
2 | val x_theta : (int, bool) wrap_theta
                  ^^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor wrap_theta expects 1 argument(s),
       but is here applied to 2 argument(s)
